Adds tests for countertrade RA import