@@ -10,6 +10,7 @@ package com.powsybl.openrao.data.crac.io.nc.craccreator.remedialaction;
 import com.powsybl.openrao.data.crac.api.RemedialAction;
 import com.powsybl.openrao.data.crac.api.cnec.FlowCnec;
 import com.powsybl.openrao.data.crac.api.networkaction.NetworkAction;
+import com.powsybl.openrao.data.crac.api.rangeaction.CounterTradeRangeAction;
 import com.powsybl.openrao.data.crac.api.rangeaction.PstRangeAction;
 import com.powsybl.openrao.data.crac.io.commons.api.ImportStatus;
 import com.powsybl.openrao.data.crac.io.nc.craccreator.NcCracCreationContext;
@@ -240,6 +241,227 @@ class RemedialActionCreationTest {
     }
 
     @Test
+    void importRemedialActionsWithCountertrade() {
+        NcCracCreationContext cracCreationContext = NcCracCreationTestUtil.getNcCracCreationContext(
+                "/profiles/remedialactions/CountertradeRemedialActions.zip",
+                NcCracCreationTestUtil.NETWORK
+        );
+
+        List<RemedialAction<?>> importedRemedialActions = cracCreationContext.getCrac().getRemedialActions().stream()
+                .sorted(Comparator.comparing(RemedialAction::getId))
+                .toList();
+        assertEquals(8, importedRemedialActions.size());
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(0),
+                "remedial-action-1",
+                "remedial-action-1",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                null
+        );
+        NcCracCreationTestUtil.assertHasOnInstantUsageRule(
+                cracCreationContext,
+                "remedial-action-1",
+                NcCracCreationTestUtil.PREVENTIVE_INSTANT_ID
+        );
+
+        NcCracCreationTestUtil.assertCounterTradeRangeActionsImported(
+                (CounterTradeRangeAction) importedRemedialActions.get(1),
+                "remedial-action-11",
+                "RA11 COUNTERTRADING SWE",
+                4000f,
+                3000f,
+                "RTE"
+        );
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(2),
+                "remedial-action-2",
+                "RA2",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                null
+        );
+        NcCracCreationTestUtil.assertHasOnInstantUsageRule(
+                cracCreationContext,
+                "remedial-action-2",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnInstantUsageRule(
+                cracCreationContext,
+                "remedial-action-2",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnInstantUsageRule(
+                cracCreationContext,
+                "remedial-action-2",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID
+        );
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(3),
+                "remedial-action-3",
+                "remedial-action-3",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                "RTE"
+        );
+        assertEquals(Optional.of(10), importedRemedialActions.get(3).getSpeed());
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-3",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-3",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-3",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID
+        );
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(4),
+                "remedial-action-4",
+                "RTE_RA4",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                "RTE"
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-4",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-4",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-4",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID);
+
+        assertEquals(3, ((NetworkAction) importedRemedialActions.get(5)).getElementaryActions().size());
+        NcCracCreationTestUtil.assertHasOnInstantUsageRule(cracCreationContext, "remedial-action-5", NcCracCreationTestUtil.PREVENTIVE_INSTANT_ID);
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(6),
+                "remedial-action-6",
+                "RTE_RA6",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                "RTE"
+        );
+        assertEquals(6, importedRemedialActions.get(6).getUsageRules().size());
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-6",
+                "contingency-2",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID
+        );
+
+        NcCracCreationTestUtil.assertPstRangeActionImported(
+                (PstRangeAction) importedRemedialActions.get(7),
+                "remedial-action-9",
+                "RTE_RA9",
+                "BBE2AA1  BBE3AA1  1",
+                null,
+                null,
+                "RTE"
+        );
+
+        assertEquals(3, importedRemedialActions.get(7).getUsageRules().size());
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-9",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_1_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-9",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_2_INSTANT_ID
+        );
+        NcCracCreationTestUtil.assertHasOnContingencyStateUsageRule(
+                cracCreationContext,
+                "remedial-action-9",
+                "contingency-1",
+                NcCracCreationTestUtil.CURATIVE_3_INSTANT_ID
+        );
+
+        assertEquals(3, cracCreationContext.getRemedialActionCreationContexts().stream()
+                .filter(context -> !context.isImported())
+                .toList().size());
+
+        NcCracCreationTestUtil.assertRaNotImported(
+                cracCreationContext,
+                "remedial-action-7",
+                ImportStatus.NOT_FOR_RAO,
+                "Remedial action remedial-action-7 will not be imported because it is set as unavailable"
+        );
+        NcCracCreationTestUtil.assertRaNotImported(
+                cracCreationContext,
+                "remedial-action-8",
+                ImportStatus.INCONSISTENCY_IN_DATA,
+                "Remedial action remedial-action-8 will not be imported because it is linked to a contingency but is not curative"
+        );
+        NcCracCreationTestUtil.assertRaNotImported(
+                cracCreationContext,
+                "remedial-action-10",
+                ImportStatus.NOT_FOR_RAO,
+                "Remedial action remedial-action-10 will not be imported because it has no elementary action"
+        );
+    }
+
+    @Test
     void testUsageRulesCreation() {
         NcCracCreationContext cracCreationContext = NcCracCreationTestUtil.getNcCracCreationContext(
             "/profiles/remedialactions/UsageRules.zip",
@@ -251,7 +473,7 @@ class RemedialActionCreationTest {
             .toList();
         assertEquals(10, importedRemedialActions.size());
 
-        NcCracCreationTestUtil.assertPstRangeActionImported((PstRangeAction) importedRemedialActions.get(0),
+        NcCracCreationTestUtil.assertPstRangeActionImported((PstRangeAction) importedRemedialActions.getFirst(),
             "remedial-action-1", "RTE_RA1", "BBE2AA1  BBE3AA1  1", null, null, "RTE");
         assertEquals(1, importedRemedialActions.get(0).getUsageRules().size());
         NcCracCreationTestUtil.assertHasOnInstantUsageRule(cracCreationContext, "remedial-action-1", NcCracCreationTestUtil.PREVENTIVE_INSTANT_ID);
